# reloader

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
cmd/reloader/: BUILD.bazel  config_map.go  config_map_test.go  k8s.go  k8s_test.go  main.go  secret.go  secret_test.go  secrets.go  secrets_test.go
tools/bazel/mock/: BUILD.bazel
